# tai

./: .cursorignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  plan.md  settings.json  setup  uninstall
.claude-plugin/: plugin.json
.cursor/rules/: cli.mdc  docs-site.mdc  tstack-project.mdc
agents/: tstack-explorer.md  tstack-implementer.md
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  frontmatter.rs  symlink.rs  types.rs  ui.rs
cli/src/commands/: add.rs  doctor.rs  install.rs  list.rs  run.rs  status.rs  template.rs  uninstall.rs  version.rs
cli/tests/common/: mod.rs
commands/: tstack-commit.md  tstack-context.md  tstack-debug.md  tstack-execute.md  tstack-feature.md  tstack-help.md  tstack-implement.md  tstack-mission.md  tstack-new-agent.md  tstack-new-command.md  tstack-next.md  tstack-plan.md  tstack-refactor.md  tstack-resume.md  tstack-review.md  tstack-scope.md  tstack-ship.md  tstack-status.md  tstack-task.md  tstack-test.md  tstack-undo.md  tstack-validate.md  tstack-verify.md
commands/git/: commit.md  (+2 more)
docs/: README.md  agent-teams.md  agents.md  cli.md  commands.md  extensions.md  hooks.md  install.md  missions.md  quality-pipeline.md  skills.md  tiers.md
docs-site/: astro.config.mjs  components.json  package.json  pnpm-lock.yaml
hooks/: agent-return-validator.js  branch-guard.js  clear-quality-flag.js  freeze.js  guard-destructive.js  guard-pnpm.js  hooks.json  quality-gate.js  tstack-agent-return-validator.js  tstack-branch-guard.js  tstack-quality-gate.js
rules/: convex.md  frontend.md  tests.md
templates/: tstack.local.md
(+140 files in other folders)
