[package]
name = "tstack"
version = "0.2.0"
edition = "2021"
description = "CLI for the tstack dev framework"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
anyhow = "1"
indicatif = "0.17"
crossterm = "0.28"
cliclack = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
